﻿---------------------------------------------------------------------------------------------------
Version: 0.33.0
Date: 2022-01-?
  Features:
    - Added universal transfer chest type (accepts any item)
  Changes:
    - Improved localization of storage
    - Changed buttons for chests
    - Changed style
    - Added modififed version of icons from https://www.svgrepo.com/svg/11042/shopping-cart-with-down-arrow-e-commerce-symbol
  Bugfixes:
    - Fixed shortcut of buy boxes
  Scripting:
    - Refactored
---------------------------------------------------------------------------------------------------
Version: 0.32.7
Date: 2022-01-09
  Locale:
    - Added Czech translation (thanks to @eifel (Eifel87) on crowdin)
    - Translations: https://crowdin.com/project/factorio-mods-localization (thank you for contributions, I really appreciate it)
---------------------------------------------------------------------------------------------------
Version: 0.32.6
Date: 2022-01-08
  Features:
    - Added auto-limit 1 on items with stack size 5 and less in storage for new teams
---------------------------------------------------------------------------------------------------
Version: 0.32.5
Date: 2022-01-08
  Features:
    - Added auto-limit 1 on items with stack size 5 and less in storage for old teams
---------------------------------------------------------------------------------------------------
Version: 0.32.4
Date: 2022-01-08
  Features:
    - Players can open item price gui by clicking on an item icon in storage
---------------------------------------------------------------------------------------------------
Version: 0.32.3
Date: 2022-01-06
  Bugfixes:
    - Better check of nonexistent items
---------------------------------------------------------------------------------------------------
Version: 0.32.2
Date: 2022-01-04
  Scripting:
    - Extended "free-market" interface + safer